[package]
name = "marching_cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.12.1"
noise = "0.7.0"

progressing = "3.0.2"