[package]
name = "marching_cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_prototype_debug_lines = { version = "0.8.1", features = ["3d"] }

ttf2mesh = "0.2.0"

noise = "0.8.1"

stopwatch = "0.0.7"

rand = "0.8.5"

[workspace]
resolver = "2"